Resolve nav-bar Overlapping
/* 문제: margin 없어도 block 요소니까 안 겹쳐야 되는 거 아닌가? fixed라서 그런가? 왜 겹치는 거지? */

오비이락
  /* 원인1: 클론 코딩 강의 영상에서 아직 나오지 않은 status-bar를 fixed로 선정해 둔 것을 깜빡하고 비교했던 것이 원인 */

  /* 원인2: Friend's Names Display 문구를 screen-header 밑이 아닌 위에다 적어두었음, 왜 그랬을까?*/

--- a/CSS/components/status-bar.css
+++ b/CSS/components/status-bar.css
@@ -2,7 +2,10 @@
   display: flex;
   justify-content: center;
   padding: 5px 3px;
-  font-size: 20px;
+  font-size: 25px;
+  position: fixed;
+  width: 100%;
+  background-color: white;
 }
 .status-bar__column {
   width: 33%;
