--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html,
 body,
 div,
@@ -129,4 +124,8 @@ table {
 }
 input:focus {
   outline: none;
+}
+a {
+  text-decoration: none;
+  color: inherit;
 }
